<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:orientation="vertical"
        tools:context=".ui.AddTaskActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_weight="0.9"
                android:padding="14dp"
                android:text="@string/addtask_toolbar_title"
                android:textColor="#696B6C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.1"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_baseline_add_task_24"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <EditText
            android:id="@+id/editText_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:hint="@string/hint_task_title"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/editText_task_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:hint="@string/hint_task_desc"
            android:inputType="textCapSentences" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_dateCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date created:"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>